Prevent screen content from overflowing visor

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ html, body {
     width: 188px;
     height: 70px;
     font-size: 20px;
+    text-align: right;
     border-radius: 4px;
     color:  rgb(62, 62, 63);
     padding-left: 5px;
@@ -32,6 +33,7 @@ html, body {
     margin-top: 14px;
     background-color: whitesmoke;
     font-size: 24px;
+    overflow: hidden;
 }
 
 .calc{
